--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -1,4 +1,4 @@
-<div class="main-content">
+<!-- <div class="main-content">
   <nav class="navbar navbar-top navbar-horizontal navbar-expand-md">
     <div class="container px-4">
       <a class="brand" routerLinkActive="active" [routerLink]="['/dashboard/investment']">
@@ -7,4 +7,17 @@
     </div>
   </nav>
   <router-outlet></router-outlet>
+</div> -->
+
+
+<!-- provisional example -->
+<div class="one-more-container">
+  <div id="post" class="single-featured-background">
+    <div class="onlyBg"></div>
+    <div class="super-title-container">
+      <div class="description-container">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div>
 </div>
