--- a/src/app/modules/dashboard/components/card-stat/card-stat.component.html
+++ b/src/app/modules/dashboard/components/card-stat/card-stat.component.html
@@ -2,7 +2,7 @@
     <div class="card-body">
         <div class="metric-container">
             <div class="metric-data">
-                <h5 class="card-title text-uppercase text-muted mb-0">{{ stat.metricTitle }}</h5>
+                <h4 class="card-title text-uppercase text-muted mb-0">{{ stat.metricTitle }}</h4>
                 <span class="h3 font-weight-bold mb-0">{{ stat.metricValue }}</span>
             </div>
             <div class="metric-icon">
@@ -13,7 +13,7 @@
         </div>
         <div class="submetric-container text-muted" *ngIf="stat.subMetricTitle">
             <div class="submetric-data">
-                <span class="text-nowrap h5 mr-2 text-muted text-uppercase">{{ stat.subMetricTitle }}</span>
+                <span class="text-nowrap h5 mr-2 text-muted text-uppercase"><b>{{ stat.subMetricTitle }}</b></span>
                 <span>{{ stat.subMetricValue }}</span>
             </div>
         </div>
