--- a/src/app/modules/dashboard/components/general-filters/general-filters.component.html
+++ b/src/app/modules/dashboard/components/general-filters/general-filters.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-12 col-sm-6 col-lg-3 mb-4">
         <div class="date-picker">
-            <small class="text-muted mb-1"><b>Periodo</b></small>
+            <span class="mb-1 h4">Periodo</span>
             <mat-form-field appearance="fill">
                 <mat-date-range-input [rangePicker]="picker">
                     <input matStartDate placeholder="Fecha inicio">
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div class="col-12 col-sm-6 col-lg-3 mb-4">
-        <small class="text-muted mb-1"><b>Sector</b></small>
+        <span class="mb-1 h4">Sector</span>
         <mat-select [formControl]="sectors" multiple placeholder="Selecciona una sector">
             <mat-select-trigger>
                 {{sectors.value ? sectors.value[0]?.name : ''}}
@@ -26,7 +26,7 @@
         </mat-select>
     </div>
     <div class="col-12 col-sm-6 col-lg-3 mb-4">
-        <small class="text-muted mb-1"><b>Categoría</b></small>
+        <span class="mb-1 h4">Categoría</span>
         <mat-select [formControl]="categories" multiple placeholder="Selecciona una categoría">
             <mat-select-trigger>
                 {{categories.value ? categories.value[0]?.name : ''}}
@@ -39,7 +39,7 @@
         </mat-select>
     </div>
     <div class="col-12 col-sm-6 col-lg-3 mb-4">
-        <small class="text-muted mb-1"><b>Campaña</b></small>
+        <span class="mb-1 h4">Campaña</span>
         <mat-select [formControl]="campaigns" multiple placeholder="Selecciona una campaña">
             <mat-select-trigger>
                 {{campaigns.value ? campaigns.value[0]?.name : ''}}
