--- a/src/app/modules/dashboard/pages/country/country.component.html
+++ b/src/app/modules/dashboard/pages/country/country.component.html
@@ -1,13 +1,13 @@
 <div class="main-container mt-4">
-    <!-- <div class="row">
+    <div class="row">
         <div class="col-12">
-            <p class="h2 text-uppercase text-muted mb-4"><b>Visión general</b></p>
+            <p class="h2 mb-4 text-xl">Visión general</p>
         </div>
-    </div> -->
-
-    <div class="header bg-light mb-4">
-        <p class="h2 text-uppercase text-muted py-2 ml-3 mr-3"><b>Visión general</b></p>
     </div>
+
+    <!-- <div class="header bg-light mb-4">
+        <p class="h2 text-uppercase text-muted py-2 ml-3 mr-3"><b>Visión general</b></p>
+    </div> -->
 
     <!-- CARD STATS -->
     <div class="row">
@@ -23,7 +23,7 @@
         <div class="col-12 col-lg-6 mb-4">
             <div class="card">
                 <div class="card-header">
-                    <span class="text-uppercase text-sm text-muted"><b>Inversión por mes</b></span>
+                    <span class="h4">Inversión por mes</span>
                 </div>
                 <div class="card-body">
                     <app-graph-pie [data]="devices" name="devices-per-sector" value="value" category="name">
@@ -36,7 +36,7 @@
         <div class="col-12 col-lg-6 mb-4">
             <div class="card">
                 <div class="card-header">
-                    <span class="text-uppercase text-sm text-muted"><b>Género</b></span>
+                    <span class="h4">Género</span>
                 </div>
                 <div class="card-body">
                     <app-graph-pie [data]="gender" name="gender" value="value" category="name">
@@ -49,7 +49,7 @@
         <div class="col-12 col-lg-6 mb-4">
             <div class="card">
                 <div class="card-header">
-                    <span class="text-uppercase text-sm text-muted"><b>Usuarios por sector</b></span>
+                    <span class="h4">Usuarios por sector</span>
                 </div>
                 <div class="card-body">
                     <app-graph-pie [data]="usersBySector" name="users-sector" value="value" category="name">
@@ -62,7 +62,7 @@
         <div class="col-12 col-lg-6 mb-4">
             <div class="card">
                 <div class="card-header">
-                    <span class="text-uppercase text-sm text-muted"><b>Ventas por sector</b></span>
+                    <span class="h4">Ventas por sector</span>
                 </div>
                 <div class="card-body">
                     <app-graph-pie [data]="salesBySector" name="sales-sector" value="value" category="name">
@@ -76,7 +76,7 @@
         <div class="col-12">
             <div class="card">
                 <div class="card-header">
-                    <span class="text-uppercase text-sm text-muted"><b>Inversión vs Revenue</b></span>
+                    <span class="h4">Inversión vs Revenue</span>
                 </div>
                 <div class="card-body">
                     <app-graph-line-comparison [data]="investmentVsRevenue" name="investment-vs-revenue">
