--- a/src/assets/scss/custom/_type.scss
+++ b/src/assets/scss/custom/_type.scss
@@ -11,4 +11,10 @@
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: 'HPSimplified',Arial,sans-serif !important;
+    font-weight: 400;
+    color: #000000;
+}
+
+body {
+    letter-spacing: 0.01875rem;
 }
