rename graph by charts components

--- a/src/app/modules/dashboard/components/acquisition-wrapper/acquisition-wrapper.component.html
+++ b/src/app/modules/dashboard/components/acquisition-wrapper/acquisition-wrapper.component.html
@@ -5,8 +5,8 @@
                 <span class="h4">Usuarios por sector</span>
             </div>
             <div class="card-body">
-                <app-graph-line-series [series]="usersBySectors" name="users-sector">
-                </app-graph-line-series>
+                <app-chart-line-series [series]="usersBySectors" name="users-sector">
+                </app-chart-line-series>
             </div>
         </div>
     </div>
@@ -16,8 +16,8 @@
                 <span class="h4">Usuarios por fuente</span>
             </div>
             <div class="card-body">
-                <app-graph-line-series [series]="usersBySources" name="users-source">
-                </app-graph-line-series>
+                <app-chart-line-series [series]="usersBySources" name="users-source">
+                </app-chart-line-series>
             </div>
         </div>
     </div>
