--- a/src/app/modules/dashboard/pages/retailer/retailer.component.html
+++ b/src/app/modules/dashboard/pages/retailer/retailer.component.html
@@ -17,8 +17,8 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
-                        <app-graph-line-series [series]="campMetrics" name="campaign-metrics">
-                        </app-graph-line-series>
+                        <app-chart-line-series [series]="campMetrics" name="campaign-metrics">
+                        </app-chart-line-series>
                     </div>
                 </div>
             </div>
