--- a/src/app/modules/dashboard/components/charts/chart-heat-map/chart-heat-map.component.html
+++ b/src/app/modules/dashboard/components/charts/chart-heat-map/chart-heat-map.component.html
@@ -1,3 +1,3 @@
 <div class="chart">
-    <div [id]="graphID" style="height: 100%"></div>
+    <div [id]="chartID" style="height: 100%"></div>
 </div>
