load charts with day periods

--- a/src/app/modules/dashboard/components/audiences-wrapper/audiences-wrapper.component.html
+++ b/src/app/modules/dashboard/components/audiences-wrapper/audiences-wrapper.component.html
@@ -5,7 +5,7 @@
                 <span class="h4">Análisis por tráfico</span>
             </div>
             <div class="card-body">
-                <app-chart-line [data]="trafficByMonths" name="traffic-months" date="date" value="visits">
+                <app-chart-line [data]="trafficByDays" name="traffic-days" date="date" value="visits">
                 </app-chart-line>
             </div>
         </div>
