add height input in card-stat component

--- a/src/app/modules/dashboard/components/card-stat/card-stat.component.html
+++ b/src/app/modules/dashboard/components/card-stat/card-stat.component.html
@@ -1,4 +1,4 @@
-<div class="card card-stats mb-4 mb-xl-0">
+<div class="card card-stats mb-4 mb-xl-0" [style.height]="height">
     <div class="card-body">
         <div class="metric-container">
             <div class="metric-data">
