show conversion-wrapper component in retailer component panel

--- a/src/app/modules/dashboard/pages/retailer/retailer.component.html
+++ b/src/app/modules/dashboard/pages/retailer/retailer.component.html
@@ -223,7 +223,7 @@
                             <span class="h3 mb-0">Conversión</span>
                         </mat-panel-title>
                     </mat-expansion-panel-header>
-                    <p>Contenido de conversión</p>
+                    <app-conversion-wrapper *ngIf="extPanelIsOpen.panel4"></app-conversion-wrapper>
                 </mat-expansion-panel>
             </mat-accordion>
         </div>
