use dynamic data in chart of acquisition-wrapper component

--- a/src/app/modules/dashboard/components/acquisition-wrapper/acquisition-wrapper.component.scss
+++ b/src/app/modules/dashboard/components/acquisition-wrapper/acquisition-wrapper.component.scss
@@ -9,3 +9,12 @@ table {
 .adaptable-container {
     overflow: auto;
 }
+
+
+.pills-container {
+    width: 60%;
+
+    @media screen and (max-width: 820px) {
+        width: 100%;
+    }
+}
